fix(security): parameterize db credentials and validate rpc function name